[package]
name = "broker"
version = "0.1.0"
edition = "2021"
description = "The bridge between FOSSA and internal DevOps services"
readme = "README.md"
homepage = "https://github.com/fossas/broker"
repository = "https://github.com/fossas/broker"
license = "Apache-2.0"
exclude = [ "docs", ".github" ]
publish = false # rather than publishing this to crates.io, we'll provide releases here on GitHub.

# Broker always tracks latest Rust, but this is the minimum required.
rust-version = "1.68"

[dependencies]
bytesize = { version = "1.2.0", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
colored = "2.0.0"
delegate = "0.9.0"
derive-new = "0.5.9"
derive_more = "0.99.17"
dirs = "5.0.0"
error-stack = { version = "0.3.1", features = ["spantrace", "hooks"] }
futures = "0.3.28"
getset = "0.1.2"
humantime = "2.1.0"
indoc = "2.0.1"
once_cell = "1.17.1"
rolling-file = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
subtle = "2.4.1"
tempfile = "3.5.0"
serde_yaml = "0.9.19"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full", "fs"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
url = "2.3.1"
base64 = "0.21.0"
itertools = "0.10.5"
time = { version = "0.3.20", features = ["parsing"] }
yaque = "0.6.4"
reqwest = "0.11.16"
zip = "0.6.4"
bytes = "1.4.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "time", "offline"] }
async-trait = "0.1.68"
semver = { version = "1.0.17", features = ["serde"] }
tap = "1.0.1"
tokio-retry = "0.3.0"
uuid = { version = "1.3.0", features = ["v4"] }
atty = "0.2.14"
serde_json = "1.0.94"
cached = "0.42.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
duplicate = "1.0.0"
aho-corasick = "0.7.20"
regex = "1.7.3"
srclib = { git = "https://github.com/fossas/foundation-libs", branch = "add-srclib" }

[dev-dependencies]
insta = { version = "1.29.0", features = ["filters", "json", "yaml"] }
proptest = "1.1.0"
strum = { version = "0.24.1", features = ["derive"] }
test-strategy = "0.3.0"

[build-dependencies]
error-stack = { version = "0.3.1", features = ["hooks"] }
thiserror = "1.0.40"

[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
