[package]
name = "broker"
version = "0.2.2"
edition = "2021"
description = "The bridge between FOSSA and internal DevOps services"
readme = "README.md"
homepage = "https://github.com/fossas/broker"
repository = "https://github.com/fossas/broker"
license = "Apache-2.0"
exclude = [ "docs", ".github" ]

# Broker always tracks latest Rust, but this is the minimum required.
rust-version = "1.68"

[features]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
bytesize = { version = "1.2.0", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive", "cargo", "env"] }
colored = "2.0.0"
delegate = "0.9.0"
derive-new = "0.5.9"
derive_more = "0.99.17"
dirs = "5.0.1"
error-stack = { version = "0.3.1", features = ["spantrace", "hooks"] }
futures = "0.3.28"
getset = "0.1.2"
humantime = "2.1.0"
indoc = "2.0.1"
once_cell = "1.17.1"
rolling-file = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
subtle = "2.4.1"
tempfile = "3.5.0"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full", "fs"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = "2.4.0"
base64 = "0.21.2"
itertools = "0.10.5"
time = { version = "0.3.22", features = ["parsing"] }
yaque = "0.6.4"
reqwest = { version = "0.11.18", features = ["rustls-tls"], default-features = false }
zip = "0.6.6"
bytes = "1.4.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "time", "offline"], default-features = false }
async-trait = "0.1.68"
semver = { version = "1.0.17", features = ["serde"] }
tap = "1.0.1"
tokio-retry = "0.3.0"
uuid = { version = "1.3.3", features = ["v4"] }
atty = "0.2.14"
serde_json = "1.0.96"
cached = "0.43.0"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
duplicate = "1.0.0"
aho-corasick = "0.7.20"
regex = "1.8.1"
srclib = { git = "https://github.com/fossas/foundation-libs", branch = "add-srclib" }
walkdir = "2.3.3"
tar = "0.4.38"
libflate = "1.3.0"
typed-builder = "0.14.0"
which = "4.4.0"
tikv-jemallocator = { version = "0.5.0", optional = true }

[dev-dependencies]
insta = { version = "1.29.0", features = ["filters", "json", "yaml"] }
proptest = "1.2.0"
strum = { version = "0.24.1", features = ["derive"] }
test-strategy = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }
rayon = "1.7.0"

[[bench]]
name = "allocations"
harness = false

[build-dependencies]
error-stack = { version = "0.3.1", features = ["hooks"] }
thiserror = "1.0.40"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
