[package]
name = "broker"
version = "0.3.6"
edition = "2021"
description = "The bridge between FOSSA and internal DevOps services"
readme = "README.md"
homepage = "https://github.com/fossas/broker"
repository = "https://github.com/fossas/broker"
license = "Apache-2.0"
exclude = [ "docs", ".github" ]

# Broker always tracks latest Rust, but this is the minimum required.
rust-version = "1.68"

[features]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
bytesize = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive", "cargo", "env"] }
colored = "2.0.4"
delegate = "0.13.3"
derive-new = "0.7.0"
derive_more = "0.99.20"
dirs = "6.0.0"
error-stack = { version = "0.3.1", features = ["spantrace", "hooks"] }
futures = "0.3.31"
getset = "0.1.5"
humantime = "2.2.0"
indoc = "2.0.6"
once_cell = "1.21.3"
rolling-file = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
subtle = "2.6.1"
tempfile = "3.20.0"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "fs"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
base64 = "0.22.1"
itertools = "0.14.0"
time = { version = "0.3.41", features = ["parsing"] }
reqwest = { version = "0.12.15", features = ["rustls-tls"], default-features = false }
zip = "0.6.6"
bytes = "1.10.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "time"], default-features = false }
async-trait = "0.1.88"
semver = { version = "1.0.26", features = ["serde"] }
tap = "1.0.1"
tokio-retry = "0.3.0"
uuid = { version = "1.16.0", features = ["v4"] }
atty = "0.2.14"
serde_json = "1.0.140"
cached = "0.43.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
aho-corasick = "0.7.20"
regex = "1.11.1"
srclib = { git = "https://github.com/fossas/foundation-libs" }
walkdir = "2.5.0"
tar = "0.4.44"
libflate = "2.1.0"
typed-builder = "0.21.0"
which = "5.0.0"
tikv-jemallocator = { version = "0.6.0", optional = true }
deadqueue = "0.2.4"
governor = "0.10.0"
nonzero_ext = "0.3.0"
glob = "0.3.2"

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters", "json", "yaml"] }
proptest = "1.6.0"
strum = { version = "0.27.1", features = ["derive"] }
test-strategy = "0.3.1"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10.0"

[[bench]]
name = "allocations"
harness = false

[build-dependencies]
error-stack = { version = "0.3.1", features = ["hooks"] }
thiserror = "2.0.12"

[profile.dev.package.insta]
opt-level = 3
